samples/_failures_safe/1761371516_44752d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b43576d5.c: In function ‘main’:
./samples/SAFE/__tmp_b43576d5.c:159: error: expected ‘{’ at end of input
